Initial commit: Vegetation Prime v1.0.0
- Multi-spectral index calculation (NDVI, EVI, SAVI, GNDVI, NDRE)
- Sentinel-2 L2A integration via Copernicus Data Space Ecosystem
- Asynchronous job processing with Celery + Redis
- High-performance tile serving with lazy caching
- FIWARE NGSI-LD integration
- Multi-tenant architecture with Row Level Security
- Monetization system with usage tracking
- Docker and Kubernetes deployment ready

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,125 @@
+# =============================================================================
+# Vegetation Prime Module - .gitignore
+# =============================================================================
+
+# =============================================================================
+# Documentation (obsolete)
+# =============================================================================
+documents/
+
+# =============================================================================
+# Dependencies
+# =============================================================================
 node_modules/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# =============================================================================
+# Build outputs
+# =============================================================================
 dist/
-.DS_Store
-*.log
+build/
+*.egg-info/
+.eggs/
+*.egg
+
+# =============================================================================
+# Environment variables and secrets
+# =============================================================================
 .env
 .env.local
+.env.*.local
+*.env
+backend/.env
+frontend/.env
+
+# =============================================================================
+# IDE and editor files
+# =============================================================================
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# =============================================================================
+# Logs
+# =============================================================================
+*.log
+logs/
+*.log.*
+
+# =============================================================================
+# Testing
+# =============================================================================
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+
+# =============================================================================
+# Docker
+# =============================================================================
+.dockerignore
+
+# =============================================================================
+# Temporary files
+# =============================================================================
+*.tmp
+*.temp
+.cache/
+tmp/
+temp/
+
+# =============================================================================
+# OS files
+# =============================================================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Desktop.ini
+
+# =============================================================================
+# Python virtual environments
+# =============================================================================
+venv/
+env/
+ENV/
+.venv
+
+# =============================================================================
+# TypeScript
+# =============================================================================
+*.tsbuildinfo
+
+# =============================================================================
+# Database
+# =============================================================================
+*.db
+*.sqlite
+*.sqlite3
+
+# =============================================================================
+# Redis dumps
+# =============================================================================
+dump.rdb
+
+# =============================================================================
+# Coverage reports
+# =============================================================================
+coverage/
+.nyc_output/
+
+# =============================================================================
+# Vite
+# =============================================================================
+.vite/
