--- a/manifest.json
+++ b/manifest.json
@@ -1,44 +1,77 @@
 {
-  "id": "hello-world",
-  "name": "hello-world",
-  "display_name": "Hello World Module",
+  "id": "vegetation-prime",
+  "name": "vegetation-prime",
+  "display_name": "Vegetation Prime",
   "version": "1.0.0",
-  "description": "A simple Hello World module demonstrating NKZ Platform module development. This is a template that you can customize for your own module.",
-  "short_description": "Your first Nekazari module",
+  "description": "High-performance vegetation intelligence suite with advanced spectral index calculation, Sentinel-2 integration, and AI-powered predictions for agricultural monitoring.",
+  "short_description": "Advanced vegetation health monitoring and analysis",
   "author": {
-    "name": "Your Name",
-    "email": "your.email@example.com",
-    "organization": "Your Organization (optional)"
+    "name": "Nekazari Team",
+    "email": "nekazari@artotxiki.com",
+    "organization": "Nekazari"
   },
-  "category": "custom",
-  "module_type": "ADDON_FREE",
-  "required_plan_type": "basic",
-  "pricing_tier": "FREE",
-  "route_path": "/hello-world",
-  "label": "Hello World",
-  "icon": "sparkles",
+  "category": "analytics",
+  "module_type": "ADDON_PAID",
+  "required_plan_type": "premium",
+  "pricing_tier": "PAID",
+  "route_path": "/vegetation",
+  "label": "Vegetation",
+  "icon": "leaf",
   "icon_url": "assets/icon.png",
   "required_roles": ["Farmer", "TenantAdmin", "PlatformAdmin"],
   "dependencies": {
     "sdk_version": "^1.0.0",
     "react_version": "^18.3.1",
-    "platform_version": "^1.0.0"
+    "platform_version": "^2.0.0"
   },
   "permissions": {
-    "api_access": [],
-    "storage_access": false,
-    "external_requests": []
+    "api_access": [
+      "/api/vegetation/jobs",
+      "/api/vegetation/indices",
+      "/api/vegetation/timeseries",
+      "/api/vegetation/config",
+      "/api/vegetation/calculate"
+    ],
+    "storage_access": true,
+    "external_requests": [
+      "https://dataspace.copernicus.eu"
+    ]
   },
   "build_config": {
     "type": "remote",
-    "remote_entry_url": "/modules/hello-world/assets/remoteEntry.js",
-    "scope": "hello_world_module",
+    "remote_entry_url": "/modules/vegetation-prime/assets/remoteEntry.js",
+    "scope": "vegetation_prime_module",
     "exposed_module": "./App"
   },
   "metadata": {
-    "icon": "✨",
-    "color": "#3B82F6",
-    "features": ["Hello World", "Basic Module Structure"],
-    "screenshots": []
+    "icon": "🌱",
+    "color": "#10B981",
+    "features": [
+      "Multi-spectral index calculation (NDVI, EVI, SAVI, GNDVI, NDRE)",
+      "Custom formula engine",
+      "Sentinel-2 L2A integration",
+      "Time series analysis",
+      "FIWARE NGSI-LD integration",
+      "High-performance raster visualization"
+    ],
+    "screenshots": [
+      "assets/screenshot1.png"
+    ],
+    "slots": {
+      "layer-controls": [
+        {
+          "id": "vegetation-layer-control",
+          "component": "VegetationLayerControl",
+          "priority": 10
+        }
+      ],
+      "bottom-panel": [
+        {
+          "id": "vegetation-timeline",
+          "component": "TimelineWidget",
+          "priority": 10
+        }
+      ]
+    }
   }
 }
