--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nekazari-module-template",
+  "name": "vegetation-prime-module",
   "version": "1.0.0",
-  "description": "Nekazari Module Template - Quick Start",
-  "license": "Apache-2.0",
+  "description": "Vegetation Prime - High-performance vegetation intelligence suite for Nekazari Platform",
+  "license": "AGPL-3.0",
   "type": "module",
   "main": "./src/App.tsx",
   "scripts": {
@@ -17,7 +17,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "lucide-react": "^0.424.0"
+    "lucide-react": "^0.424.0",
+    "@deck.gl/core": "^9.0.0",
+    "@deck.gl/layers": "^9.0.0",
+    "@deck.gl/geo-layers": "^9.0.0",
+    "@deck.gl/mapbox": "^9.0.0",
+    "maplibre-gl": "^3.6.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.0",
