--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,16 +10,21 @@ COPY package.json package-lock.json* ./
 # Install dependencies
 RUN npm ci
 
-# Copy source code (only what's needed for build)
+# Copy all necessary files for build
 COPY src/ ./src/
-COPY public/ ./public/ 2>/dev/null || true
-COPY index.html ./
 COPY vite.config.ts ./
 COPY tsconfig.json ./
 COPY tsconfig.node.json ./
 COPY tailwind.config.js ./
 COPY postcss.config.js ./
+COPY postcss.config.cjs ./ 2>/dev/null || true
 COPY manifest.json ./
+COPY index.css ./src/index.css 2>/dev/null || true
+
+# Create index.html if it doesn't exist (Vite will generate it)
+RUN if [ ! -f index.html ]; then \
+      echo '<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Vegetation Prime</title></head><body><div id="root"></div><script type="module" src="/src/main.tsx"></script></body></html>' > index.html; \
+    fi
 
 # Build application
 RUN npm run build
@@ -64,4 +69,3 @@ EXPOSE 80
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
-
