--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,13 +25,15 @@ pyjwt==2.8.0
 cryptography==41.0.7
 PyJWKClient==1.0.0
 
-# Geospatial processing
-rasterio==1.3.9
+# Geospatial processing (install in order)
 numpy==1.24.3
 shapely==2.0.2
-fiona==1.9.5
-geopandas==0.14.1
 pyproj==3.6.1  # For accurate area calculations
+# Note: rasterio, fiona, geopandas require system libraries (installed in Dockerfile)
+# They may fail in CI but work in Docker
+rasterio==1.3.9; sys_platform != "win32"
+fiona==1.9.5; sys_platform != "win32"
+geopandas==0.14.1; sys_platform != "win32"
 
 # Sentinel-2 data access
 pystac-client==0.7.0
@@ -62,4 +64,3 @@ structlog==23.2.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-
