Change Docker build to tag-only (not on every push)
- Build only on Git tags (v*.*.*) to avoid constant builds during development
- Add manual workflow_dispatch for on-demand builds
- Update documentation with hybrid build strategy
- Development: use local builds for real-time logs
- Production: use automated builds on tags

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,21 +1,24 @@
 name: Build and Publish Docker Images
 
 on:
+  # Only build on tags (releases) to avoid constant builds during development
+  # For development, use local builds: ./scripts/build-and-push.sh
   push:
-    branches:
-      - main
-      - develop
     tags:
       - 'v*.*.*'
-  pull_request:
-    branches:
-      - main
-      - develop
+  # Allow manual trigger for testing
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version tag (e.g., v1.0.0)'
+        required: true
+        default: 'latest'
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME_BACKEND: ${{ github.repository }}/vegetation-prime-backend
   IMAGE_NAME_FRONTEND: ${{ github.repository }}/vegetation-prime-frontend
+  VERSION: ${{ github.event.inputs.version || (startsWith(github.ref, 'refs/tags/') && github.ref_name) || 'latest' }}
 
 jobs:
   build-backend:
