Fix nginx location: use rewrite instead of alias for path prefix handling
- Change from alias to rewrite to properly strip /modules/vegetation-prime/ prefix
- This ensures /modules/vegetation-prime/assets/remoteEntry.js maps to /assets/remoteEntry.js

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,9 +23,11 @@ server {
     
     # Handle /modules/vegetation-prime prefix (from ingress)
     # This allows the module to be served at /modules/vegetation-prime/* paths
+    # Rewrite removes the prefix before serving files
     location /modules/vegetation-prime/ {
-        alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /modules/vegetation-prime/index.html;
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
     
     # Serve static files from root
