--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,20 +14,18 @@ server {
         return 204;
     }
     
+    # Handle /modules/vegetation-prime prefix (from ingress)
+    # This allows the module to be served at /modules/vegetation-prime/* paths
+    # Rewrite removes the prefix before serving files
+    location /modules/vegetation-prime/ {
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 last;
+    }
+    
     # Short cache for remoteEntry.js (critical for Module Federation updates)
     location ~* remoteEntry\.js$ {
         add_header Access-Control-Allow-Origin * always;
         add_header Cache-Control "public, max-age=60, must-revalidate";
         try_files $uri =404;
-    }
-    
-    # Handle /modules/vegetation-prime prefix (from ingress)
-    # This allows the module to be served at /modules/vegetation-prime/* paths
-    # Rewrite removes the prefix before serving files
-    location /modules/vegetation-prime/ {
-        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
     }
     
     # Serve static files from root
