Fix nginx: use alias with nested location for proper /modules/vegetation-prime path handling

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,12 +16,19 @@ server {
     
     # Handle /modules/vegetation-prime prefix (from ingress)
     # This allows the module to be served at /modules/vegetation-prime/* paths
-    # Rewrite removes the prefix before serving files
-    location /modules/vegetation-prime/ {
-        rewrite ^/modules/vegetation-prime/(.*)$ /$1 last;
+    # Alias maps /modules/vegetation-prime/* to /* in the filesystem
+    location /modules/vegetation-prime {
+        alias /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+        
+        # Short cache for remoteEntry.js (critical for Module Federation updates)
+        location ~* remoteEntry\.js$ {
+            add_header Access-Control-Allow-Origin * always;
+            add_header Cache-Control "public, max-age=60, must-revalidate";
+        }
     }
     
-    # Short cache for remoteEntry.js (critical for Module Federation updates)
+    # Short cache for remoteEntry.js from root (fallback)
     location ~* remoteEntry\.js$ {
         add_header Access-Control-Allow-Origin * always;
         add_header Cache-Control "public, max-age=60, must-revalidate";
@@ -39,4 +46,3 @@ server {
         add_header Cache-Control "public, immutable";
     }
 }
-
