Improve CI/CD: build on push to main branch
- Enable automatic builds on push to main (when frontend/backend files change)
- Keep tag-based builds for releases
- This ensures images are always up-to-date in GHCR

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,11 +1,16 @@
 name: Build and Publish Docker Images
 
 on:
-  # Only build on tags (releases) to avoid constant builds during development
-  # For development, use local builds: ./scripts/build-and-push.sh
+  # Build on tags (releases) and pushes to main
   push:
+    branches:
+      - main
     tags:
       - 'v*.*.*'
+    paths:
+      - 'frontend/**'
+      - 'backend/**'
+      - '.github/workflows/docker-publish.yml'
   # Allow manual trigger for testing
   workflow_dispatch:
     inputs:
