--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,16 +16,11 @@ server {
     
     # Handle /modules/vegetation-prime prefix (from ingress)
     # This allows the module to be served at /modules/vegetation-prime/* paths
-    # Alias maps /modules/vegetation-prime/* to /* in the filesystem
-    location /modules/vegetation-prime {
-        alias /usr/share/nginx/html;
+    # Rewrite removes the prefix and serves files from root
+    location /modules/vegetation-prime/ {
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        
-        # Short cache for remoteEntry.js (critical for Module Federation updates)
-        location ~* remoteEntry\.js$ {
-            add_header Access-Control-Allow-Origin * always;
-            add_header Cache-Control "public, max-age=60, must-revalidate";
-        }
     }
     
     # Short cache for remoteEntry.js from root (fallback)
