Fix nginx rewrite: use 'last' to continue processing after rewrite

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,9 +18,7 @@ server {
     # This allows the module to be served at /modules/vegetation-prime/* paths
     # Rewrite removes the prefix and serves files from root
     location /modules/vegetation-prime/ {
-        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 last;
     }
     
     # Short cache for remoteEntry.js from root (fallback)
