--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,12 +16,13 @@ server {
     
     # Handle /modules/vegetation-prime prefix (from ingress)
     # This allows the module to be served at /modules/vegetation-prime/* paths
-    # Rewrite removes the prefix and serves files from root
+    # Alias correctly maps the path without duplicating it
     location /modules/vegetation-prime/ {
-        rewrite ^/modules/vegetation-prime/(.*)$ /$1 last;
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /modules/vegetation-prime/index.html;
     }
     
-    # Short cache for remoteEntry.js from root (fallback)
+    # Short cache for remoteEntry.js (critical for Module Federation updates)
     location ~* remoteEntry\.js$ {
         add_header Access-Control-Allow-Origin * always;
         add_header Cache-Control "public, max-age=60, must-revalidate";
