--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,11 +15,11 @@ server {
     }
     
     # Handle /modules/vegetation-prime prefix (from ingress)
-    # This allows the module to be served at /modules/vegetation-prime/* paths
-    # Alias correctly maps the path without duplicating it
-    location /modules/vegetation-prime/ {
-        alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /modules/vegetation-prime/index.html;
+    # Rewrite to remove prefix before processing
+    location ~ ^/modules/vegetation-prime/(.*)$ {
+        rewrite ^/modules/vegetation-prime/(.*)$ /$1 break;
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
     
     # Short cache for remoteEntry.js (critical for Module Federation updates)
