fix: Add /health endpoint to nginx.conf for Kubernetes health checks

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,6 +14,13 @@ server {
         return 204;
     }
     
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+    
     # Handle /modules/vegetation-prime prefix (from ingress)
     # Rewrite to remove prefix before processing
     location ~ ^/modules/vegetation-prime/(.*)$ {
