--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@deck.gl/core": "^9.0.0",
+    "@deck.gl/geo-layers": "^9.0.0",
+    "@deck.gl/layers": "^9.0.0",
+    "@deck.gl/mapbox": "^9.0.0",
     "@nekazari/sdk": "^1.0.0",
     "@nekazari/ui-kit": "^1.0.0",
+    "lucide-react": "^0.424.0",
+    "maplibre-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "lucide-react": "^0.424.0",
-    "@deck.gl/core": "^9.0.0",
-    "@deck.gl/layers": "^9.0.0",
-    "@deck.gl/geo-layers": "^9.0.0",
-    "@deck.gl/mapbox": "^9.0.0",
-    "maplibre-gl": "^3.6.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.0",
