chore: Update backend deployment to v1.9.0

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -32,7 +32,7 @@ spec:
       - name: ghcr-secret
       containers:
       - name: api
-        image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:latest
+        image: ghcr.io/k8-benetis/vegetation-health-nkz/vegetation-prime-backend:v1.9.0
         imagePullPolicy: Always
         ports:
         - name: http
