fix: Simplify platform database configuration in deployment

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -45,14 +45,7 @@ spec:
               name: postgresql-secret
               key: connection-string
         # Platform Database Configuration (for reading external_api_credentials)
-        # Use same connection string as module DB, but will connect to platform DB name
-        - name: PLATFORM_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: postgresql-secret
-              key: connection-string
-              optional: true
-        # Platform Database Components (fallback if PLATFORM_DATABASE_URL not set)
+        # Platform Database Components (used to construct connection to platform DB)
         - name: POSTGRES_HOST
           value: "postgresql-service"
         - name: POSTGRES_PORT
@@ -64,7 +57,6 @@ spec:
             secretKeyRef:
               name: postgresql-secret
               key: password
-              optional: true
         - name: PLATFORM_DATABASE_NAME
           value: "fiware_history"
         # Redis Configuration (Celery + Cache)
