fix: Use correct secret key name for DATABASE_URL

--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -43,7 +43,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: postgresql-secret
-              key: connection-string
+              key: postgres-url
         # Platform Database Configuration (for reading external_api_credentials)
         # Platform Database Name (used to construct connection to platform DB from DATABASE_URL)
         - name: PLATFORM_DATABASE_NAME
