--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,82 @@
+# Optimized Dockerfile for faster builds in GHCR
+# Key optimizations:
+# 1. Layer caching: Install system deps first (rarely change)
+# 2. Separate requirements layers: Base deps vs geospatial deps
+# 3. Copy code last to maximize cache hits
+
 FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-    # Install system dependencies
-    RUN apt-get update && apt-get install -y \
-        gcc \
-        g++ \
-        libgdal-dev \
-        gdal-bin \
-        libgeos-dev \
-        libproj-dev \
-        libspatialindex-dev \
-        postgresql-client \
-        curl \
-        && rm -rf /var/lib/apt/lists/*
+# Install system dependencies (this layer rarely changes, good for cache)
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libgdal-dev \
+    gdal-bin \
+    libgeos-dev \
+    libproj-dev \
+    libspatialindex-dev \
+    postgresql-client \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set GDAL environment variables
 ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
 ENV C_INCLUDE_PATH=/usr/include/gdal
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -r requirements.txt
+# Upgrade pip and install build tools (cached layer)
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 
-# Copy application code
+# Copy only requirements first (for better layer caching)
+COPY requirements.txt .
+
+# Install Python dependencies in stages for better caching
+# Stage 1: Base dependencies (change less frequently)
+RUN pip install --no-cache-dir \
+    fastapi==0.104.1 \
+    uvicorn[standard]==0.24.0 \
+    python-multipart==0.0.6 \
+    pydantic==2.5.0 \
+    pydantic-settings==2.1.0 \
+    sqlalchemy==2.0.23 \
+    psycopg2-binary==2.9.9 \
+    geoalchemy2==0.14.2 \
+    alembic==1.12.1 \
+    celery==5.3.4 \
+    redis==5.0.1 \
+    flower==2.0.1 \
+    pyjwt==2.8.0 \
+    cryptography==41.0.7 \
+    numpy==1.24.3 \
+    Pillow==10.1.0 \
+    boto3==1.29.7 \
+    botocore==1.32.7 \
+    simpleeval==0.9.13 \
+    httpx==0.25.2 \
+    requests==2.31.0 \
+    python-dotenv==1.0.0 \
+    python-dateutil==2.8.2 \
+    structlog==23.2.0
+
+# Stage 2: Geospatial dependencies (heavier, compile separately)
+RUN pip install --no-cache-dir \
+    shapely==2.0.2 \
+    pyproj==3.6.1 \
+    rasterio==1.3.9 \
+    fiona==1.9.5 \
+    geopandas==0.14.1
+
+# Stage 3: Sentinel-2 and remaining deps
+RUN pip install --no-cache-dir \
+    pystac-client==0.7.0 \
+    sentinelsat==1.2.1 \
+    pytest==7.4.3 \
+    pytest-asyncio==0.21.1 \
+    pytest-cov==4.1.0
+
+# Copy application code (this invalidates cache most often)
 COPY . .
 
 # Create scripts directory if it doesn't exist
