fix: Apply source patch for fiona ARM64 GDAL compatibility
- Patch fiona 1.9.5 source code to fix const char** vs char** incompatibility
- Use pre-built wheels when available, fallback to patched source build
- Fixes GHCR build error on ARM64 architecture

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -67,10 +67,17 @@ RUN pip install --no-cache-dir \
     pyproj==3.6.1 \
     rasterio==1.3.9
 
-# Install fiona with CFLAGS to handle GDAL compatibility issues on ARM64
-# The error is due to const char** vs char** incompatibility in fiona 1.9.5
-RUN CFLAGS="-Wno-incompatible-pointer-types" pip install --no-cache-dir fiona==1.9.5 || \
-    pip install --no-cache-dir fiona==1.9.5
+# Install fiona - handle GDAL compatibility issues on ARM64
+# fiona 1.9.5 has a known compilation issue with newer GDAL versions
+# Solution: Use pre-built wheels when available, or patch the source code
+RUN pip install --no-cache-dir --prefer-binary fiona==1.9.5 || \
+    (pip download --no-deps fiona==1.9.5 && \
+     tar -xzf fiona-*.tar.gz && \
+     cd fiona-* && \
+     # Patch the incompatible pointer type issue
+     sed -i 's/__pyx_v_paths = CSLAddString(__pyx_v_paths, __pyx_v_path_c);/__pyx_v_paths = CSLAddString((char**)__pyx_v_paths, __pyx_v_path_c);/g' fiona/_env.c && \
+     pip install --no-cache-dir . && \
+     cd .. && rm -rf fiona-*)
 
 # Install geopandas (depends on fiona)
 RUN pip install --no-cache-dir geopandas==0.14.1
