perf: Remove unused fiona and geopandas dependencies
- Remove fiona and geopandas from requirements.txt (not used in code)
- Simplify Dockerfile by removing fiona installation and patching logic
- Significantly reduces build time (~10-15 min faster)
- Eliminates ARM64 compilation issues completely
- Only rasterio is needed for current functionality

Future: If vector analysis is needed, use OSGeo pre-compiled base image

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,15 +25,13 @@ pyjwt==2.8.0
 cryptography==41.0.7
 # Note: PyJWKClient is included in pyjwt package (from jwt import PyJWKClient)
 
-# Geospatial processing (install in order)
+# Geospatial processing
 numpy==1.24.3
 shapely==2.0.2
 pyproj==3.6.1  # For accurate area calculations
-# Note: rasterio, fiona, geopandas require system libraries (installed in Dockerfile)
-# They may fail in CI but work in Docker
+# Note: rasterio requires system libraries (installed in Dockerfile)
+# fiona and geopandas removed - not used in code, only rasterio is needed
 rasterio==1.3.9; sys_platform != "win32"
-fiona==1.9.5; sys_platform != "win32"
-geopandas==0.14.1; sys_platform != "win32"
 
 # Sentinel-2 data access
 pystac-client==0.7.0
