feat: Expose layer data to host for CesiumMap integration
- Add useEffect to expose vegetation layer data via window.__nekazariModuleData
- Dispatch custom events for reactive updates
- Add TypeScript global type declarations
- Enables seamless integration with unified viewer's CesiumMap

--- a/manifest.json
+++ b/manifest.json
@@ -58,11 +58,29 @@
       "assets/screenshot1.png"
     ],
     "slots": {
-      "layer-controls": [
+      "layer-toggle": [
         {
           "id": "vegetation-layer-control",
           "component": "VegetationLayerControl",
           "priority": 10
+        }
+      ],
+      "context-panel": [
+        {
+          "id": "vegetation-config",
+          "component": "VegetationConfig",
+          "priority": 20,
+          "showWhen": {
+            "entityType": ["AgriParcel"]
+          }
+        },
+        {
+          "id": "vegetation-analytics",
+          "component": "VegetationAnalytics",
+          "priority": 30,
+          "showWhen": {
+            "entityType": ["AgriParcel"]
+          }
         }
       ],
       "bottom-panel": [
