chore: Actualizar Dockerfile para usar SDK de npm y versión v1.12.0

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /app
 # Copy package files
 COPY package.json package-lock.json* ./
 
+# Temporarily update package.json to use npm SDK instead of local path
+RUN sed -i 's|"file:../nekazari-public/packages/sdk"|"@nekazari/sdk@^1.0.3"|' package.json || true
+
 # Install dependencies (SDK will be installed from npm)
 RUN npm ci
 
