fix: Usar npm install en lugar de npm ci para permitir modificación de package.json

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,8 +10,8 @@ COPY package.json package-lock.json* ./
 # Temporarily update package.json to use npm SDK instead of local path
 RUN sed -i 's|"file:../nekazari-public/packages/sdk"|"@nekazari/sdk@^1.0.3"|' package.json || true
 
-# Install dependencies (SDK will be installed from npm)
-RUN npm ci
+# Install dependencies (using npm install since we modified package.json)
+RUN npm install
 
 # Copy all necessary files for build
 COPY src/ ./src/
