fix: Eliminar package-lock.json antes de instalar para forzar regeneración con SDK de npm

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,9 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 
 # Temporarily update package.json to use npm SDK instead of local path
+# Remove package-lock.json to force regeneration with npm SDK
 RUN sed -i 's|"file:../nekazari-public/packages/sdk"|"^1.0.3"|' package.json && \
+    rm -f package-lock.json && \
     echo "=== Updated package.json ===" && \
     grep "@nekazari/sdk" package.json && \
     echo "=== Installing dependencies ===" && \
